updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am learning to become a computer programmer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in Utah. I lived in Idaho for a short period of my life and have lived in Colorado for most of my life.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love to hike, sing, and learn new things.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I honestly do not know. I'm looking to change my life and change my career path. Computer Programming has become an interest of mine.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in a suburb of Denver, Colorado.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Technology has always been an interest of mine. I have always wondered about it's foundation.</p>
     </section>
 
     <footer id="footer">
