updating more details.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am learning to become a computer programmer</p>
+      <p>I am learning to become a computer programmer.</p>
       <h1>Where I'm From</h1>
       <p>I was born in Utah. I lived in Idaho for a short period of my life and have lived in Colorado for most of my life.</p>
       <h1>What are your favorite hobbies?</h1>
